# neurodual-lite

./: .gitattributes  .gitignore  AUDIT.md  README.md  biome.json  bunfig.toml  i18n-audit-intersection.csv  i18n-real-issues.csv  package.json  tsconfig.base.json  tsconfig.build.json  tsconfig.json  wrangler.json
.github/workflows/: tauri-release.yml
.wrangler/tmp/deploy-eNZ2hV/: no-op-worker.js.map
apps/web/: .env.example  .env.native  .env.pwa  capacitor.config.ts  index.html  package.json  tailwind.config.ts  test-history.json  tsconfig.json  vite-plugin-dev-logs.ts  vite.config.ts
apps/web/android/: .gitignore  capacitor.settings.gradle  gradle.properties
apps/web/android/app/: build.gradle  capacitor.build.gradle  proguard-rules.pro
apps/web/ios/App/: Podfile
apps/web/public/: _headers  app-ads.txt  module-error-handler.js  robots.txt  sitemap.xml  theme-boot.js
apps/web/public/.well-known/: assetlinks.json
apps/web/src/: app-root.tsx  env.ts  i18n.ts  main.tsx  router.tsx  styles.css  vite-env.d.ts  wdyr.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src/components/: audio-config-sync.tsx  cloud-sync-provider.tsx  (+27 more)
fastlane/: Appfile  Fastfile  README.md  report.xml
fastlane/metadata/ios/: copyright.txt
patches/: @powersync%2Fcapacitor@0.4.1.patch
scripts/: build-aab.sh  install-devapp.sh  make_promo_video.sh  screenshot.sh
scripts/i18n/: i18n-semantic-audit.py
scripts/video-promo/: capture.mjs  promo.html
workers/activation-api/: package.json  wrangler.json
workers/activation-api/src/: index.ts  schema.sql
(+1797 files in other folders)
